changed color theme, centred aligned the container, fixed the input container overflow issue on chnaging window size

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -11,7 +11,7 @@ html {
   width: var(--v-100);
   height: var(--header-height);
   border-bottom: 1px solid var(--color-line-1);
-  background-color: rgb(239, 58, 176);
+  background-color: rgb(225, 127, 127);
 
   display: grid;
   align-items: center;
@@ -88,7 +88,7 @@ html {
   border-radius: 0.4em;
   list-style: none;
   padding: 0.4rem;
-  background-color: rgb(239, 58, 176);
+  background-color: rgb(225, 127, 127);
   border: 1px solid #fff;
   box-shadow: 2px 1px 4px rgb(0, 0, 0, 0.2);
 }
