--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ body {
 .button {
     font-family: 'Baloo Bhai', cursive;
     margin: 0px 9px;
-    background-color: rgb(239, 58, 176);
+    background-color: rgb(225, 127, 127);
     color: white;
     /* padding: 4px 14px; */
     padding: 0.4em 0.3em;
@@ -22,12 +22,12 @@ body {
 }
 
 .button:hover {
-    background-color: rgb(31, 30, 30);
+    background-color: rgb(202, 7, 7);
 }
 
 .container {
     position: absolute;
-    left: 220px;
+    left: 320px;
     border: 2px solid black;
     margin: 80px 80px;
     padding: 75px;
@@ -39,17 +39,20 @@ body {
     font-family: 'Baloo Bhai', cursive;
     text-align: center;
     display: block;
-    width: 508px;
+    font-size: medium;
+    width: 80%;
     padding: 1px;
     border: 2px solid black;
     margin: 11px auto;
     font-size: 25px;
     border-radius: 8px;
 }
-
+.form-group input::placeholder {
+    font-size: 70%;
+}
 .container h1 {
     text-align: center;
-    color:rgb(239, 58, 176);
+    color:rgb(225, 127, 127);
 }
 
 .container button {
